--- a/templates/billing.html
+++ b/templates/billing.html
@@ -128,6 +128,7 @@
 
 <header>
     <div class="left">
+        <img src="/static/logo.png" style="height:36px">
         <strong>Thirupugazh POS</strong>
 
         <!-- ADMIN BUTTONS -->
